objects/redwing__Auto_Assign_Rule_Item__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Auto_Assign_Rule_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auto-Assign Rule Bundle</label>
        <referenceTo>redwing__Auto_Assign_Rule_Bundle__c</referenceTo>
        <relationshipLabel>Auto-Assign Rule Items</relationshipLabel>
        <relationshipName>Auto_Assign_Rule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Auto-Assign Rule Items</relationshipLabel>
        <relationshipName>Auto_Assign_Rule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Auto-Assign Rule Items</relationshipLabel>
        <relationshipName>Auto_Assign_Rule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Auto-Assign Rule Items</relationshipLabel>
        <relationshipName>Auto_Assign_Rule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Auto-Assign Rule Item</label>
    <nameField>
        <displayFormat>AARI-{00000000}</displayFormat>
        <label>Auto-Assign Rule Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto-Assign Rule Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>